--- a/gesture.html
+++ b/gesture.html
@@ -143,7 +143,7 @@
     <script>
         var http = new XMLHttpRequest();
 
-        var apiKey, deviceId, result, a;// variable to store apiKey and devicId
+        var apiKey, deviceId, result, a, x, y, z;// variable to store apiKey and devicId
 
         apiKey = "d3565c2e-7534-419d-b023-2e172448b479"; // Enter your apiKey
         deviceId = "BOLT293592"; // Enter your deviceId
