--- a/manual.html
+++ b/manual.html
@@ -167,7 +167,7 @@ button {
                <br>
                <div>
                 <p style="font-family: 'Montserrat', sans-serif  ; font-size: 25px; ">Gripper</p>
-                <button style="height: 40px; width: 80px; margin-right: 5%;" onclick="open()">OPEN</button>
+                <button style="height: 40px; width: 80px; margin-right: 5%;" onclick="openfunc()">OPEN</button>
                 <button style="height: 40px; width: 80px; " onclick="close()">CLOSE </button>
                </div>
                <br>
